--- a/oee_timeseries/function_config_test.yaml
+++ b/oee_timeseries/function_config_test.yaml
@@ -4,4 +4,4 @@ description: "Function to calculate OEE"
 owner: CDF Bootcamp Team
 cpu: 1.0
 memory: 1.5
-data_set_id: <DATA SET ID FOR oee_timeseries in TEST environment>
+data_set_id: data_set_id: 2899778847191084
