--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,7 +23,7 @@ repos:
     hooks:
       - id: debug-statements
       - id: trailing-whitespace
-      - id: check-yaml
+      #- id: check-yaml
         args: ['--allow-multiple-documents']
       - id: check-builtin-literals
       - id: end-of-file-fixer
