--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
       - id: debug-statements
       - id: trailing-whitespace
       #- id: check-yaml
-        args: ['--allow-multiple-documents']
+      #  args: ['--allow-multiple-documents']
       - id: check-builtin-literals
       - id: end-of-file-fixer
       - id: check-ast
