--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,11 +21,11 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
-      - id: debug-statements
-      - id: trailing-whitespace
-      #- id: check-yaml
-      #  args: ['--allow-multiple-documents']
-      - id: check-builtin-literals
-      - id: end-of-file-fixer
-      - id: check-ast
-      - id: check-docstring-first
+      # - id: debug-statements
+      # - id: trailing-whitespace
+      # #- id: check-yaml
+      # #  args: ['--allow-multiple-documents']
+      # - id: check-builtin-literals
+      # - id: end-of-file-fixer
+      # - id: check-ast
+      # - id: check-docstring-first
